# pipe

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
example/: config.json  config.toml  config.yaml
src/: config.rs  main.rs
src/collector/: streamer.rs
src/validator/: file_validator.rs  mod.rs
