[package]
name = "pipe"
version = "0.1.0"
authors = ["Kenec <nnamani.kenechukwu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = "1.0.124"
serde_any =  { version = "0.5", features = ["json", "yaml", "toml"] }
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.8.3"
url = { version = "2", features = ["serde"] }
async-std = { version = "1", features = [ "attributes" ] }